--- a/Beeter/app/src/main/res/values/strings.xml
+++ b/Beeter/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="lb_cancel">Cancel</string>
     <string name="lb_send">Send</string>
     <string name="l_post">Post</string>
+    <string name="title_activity_content_sting_detail">content_sting_detail</string>
 </resources>
